# iceoryx2-book

./: .clang-format  .gitignore  index.html  justfile  pyproject.toml
.github/workflows/: build-deploy.yml  linkcheck.yml  snippets.yml
main/: genindex.html  glossary.html  index.html  introduction.html  objects.inv  quickstart.html  search.html  searchindex.js
main/_sources/: index.rst.txt
main/fundamentals/: communication-model.html  cross-language-support.html  execution-control.html  gateways-and-tunnels.html  index.html  layered-architecture.html  shared-memory.html
main/getting-started/: index.html  quickstart.html
main/how-to/: build-for-nostd-targets.html  configure-the-logging-backend.html  customize-the-platform-abstraction.html  index.html
main/tutorials/: execution-control-patterns.html  index.html
snippets/: Cargo.toml
snippets/cross-host-communication/: README.md
snippets/cross-host-communication/c/src/: dashboard.c  larry_telemetry.c
snippets/cross-host-communication/cxx/: CMakeLists.txt
snippets/cross-host-communication/cxx/src/: dashboard.cpp
snippets/cross-host-communication/python/: dashboard.py
snippets/cross-host-communication/rust/src/: telemetry_data.rs
snippets/execution-control-patterns/rust/: Cargo.toml
snippets/robot-nervous-system/blackboard/c/: CMakeLists.txt
snippets/robot-nervous-system/blackboard/c/src/: distance.h  reader.c  writer.c
snippets/robot-nervous-system/blackboard/cxx/: CMakeLists.txt
snippets/robot-nervous-system/blackboard/cxx/src/: distance.hpp  reader.cpp  writer.cpp
snippets/robot-nervous-system/blackboard/python/: distance.py  reader.py  writer.py
snippets/robot-nervous-system/blackboard/rust/: Cargo.toml
snippets/robot-nervous-system/blackboard/rust/src/: distance.rs
snippets/robot-nervous-system/cross-host-communication/: README.md
snippets/robot-nervous-system/cross-host-communication/c/: CMakeLists.txt
snippets/robot-nervous-system/cross-host-communication/c/src/: dashboard.c  telemetry_data.h
snippets/robot-nervous-system/cross-host-communication/cxx/src/: dashboard.cpp  larry_telemetry.cpp  telemetry_data.hpp
snippets/robot-nervous-system/cross-host-communication/python/: dashboard.py  larry_telemetry.py  telemetry_data.py
snippets/robot-nervous-system/cross-host-communication/rust/: Cargo.toml
snippets/robot-nervous-system/event-driven-communication/c/: CMakeLists.txt
snippets/robot-nervous-system/event-driven-communication/c/src/: distance.h  publisher.c  subscriber.c
snippets/robot-nervous-system/event-driven-communication/cxx/: CMakeLists.txt
snippets/robot-nervous-system/event-driven-communication/cxx/src/: distance.hpp  publisher.cpp  subscriber.cpp
snippets/robot-nervous-system/event-driven-communication/python/: distance.py  publisher.py  subscriber.py
snippets/robot-nervous-system/event-driven-communication/rust/: Cargo.toml
snippets/robot-nervous-system/event/c/: CMakeLists.txt
snippets/robot-nervous-system/event/c/src/: listener.c  notifier.c
snippets/robot-nervous-system/event/cxx/: CMakeLists.txt
snippets/robot-nervous-system/event/cxx/src/: listener.cpp  notifier.cpp
snippets/robot-nervous-system/event/python/: listener.py  notifier.py
snippets/robot-nervous-system/event/rust/: Cargo.toml
snippets/robot-nervous-system/publish-subscribe/c/: CMakeLists.txt
snippets/robot-nervous-system/publish-subscribe/c/src/: distance.h  publisher.c  subscriber.c
snippets/robot-nervous-system/publish-subscribe/cxx/: CMakeLists.txt
snippets/robot-nervous-system/publish-subscribe/cxx/src/: distance.hpp  publisher.cpp  subscriber.cpp
snippets/robot-nervous-system/publish-subscribe/python/: distance.py  publisher.py  subscriber.py
snippets/robot-nervous-system/publish-subscribe/rust/: Cargo.toml
snippets/robot-nervous-system/publish-subscribe/rust/src/: distance.rs
snippets/robot-nervous-system/request-response/c/: CMakeLists.txt
snippets/robot-nervous-system/request-response/c/src/: autopilot.h  client.c  server.c
snippets/robot-nervous-system/request-response/cxx/: CMakeLists.txt
snippets/robot-nervous-system/request-response/cxx/src/: autopilot.hpp  client.cpp  server.cpp
snippets/robot-nervous-system/request-response/python/: autopilot.py  client.py  server.py
snippets/robot-nervous-system/request-response/rust/: Cargo.toml
snippets/robot-nervous-system/request-response/rust/src/: autopilot.rs
source/: conf.py  glossary.md  index.rst  introduction.md  quickstart.md
source/_templates/: page.html
source/fundamentals/: communication-model.md  execution-control.md  gateways-and-tunnels.md  index.rst  layered-architecture.md  shared-memory.md
source/getting-started/: blackboard.md  command-line-tools-and-debugging.md  event-driven-communication.md  event.md  index.rst  iox2-debugging.md  publish-subscribe.md  quickstart.md  request-response.md
source/how-to/: build-for-nostd-targets.md  configure-the-logging-backend.md
source/tutorials/: execution-control-patterns.md  index.rst
v0.7.0/: genindex.html  glossary.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
v0.7.0/_sources/: glossary.md.txt
v0.7.0/fundamentals/: communication-model.html  cross-language-support.html  execution-control.html  gateways-and-tunnels.html  index.html  layered-architecture.html  shared-memory.html
v0.7.0/getting-started/: index.html  quickstart.html
v0.8.0/: genindex.html  glossary.html  index.html  introduction.html  search.html  searchindex.js
v0.8.0/fundamentals/: communication-model.html  cross-language-support.html  execution-control.html  gateways-and-tunnels.html  index.html  layered-architecture.html  shared-memory.html
v0.8.0/getting-started/: index.html  quickstart.html
v0.8.0/how-to/: build-for-nostd-targets.html  configure-the-logging-backend.html  index.html
v0.9.0/: genindex.html  glossary.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
v0.9.0/_sources/: index.rst.txt
v0.9.1/: genindex.html  glossary.html  index.html  introduction.html  search.html
(+174 files in other folders)
