[workspace]
resolver = "2"
members = [
    "execution-control-patterns/rust",
    "cross-host-communication/rust",
    "robot-nervous-system/publish-subscribe/rust",
    "robot-nervous-system/event/rust",
    "robot-nervous-system/event-driven-communication/rust",
    "robot-nervous-system/request-response/rust",
]
