[package]
name = "cross-host-communication"
edition = "2021"
publish = false

[dependencies]
iceoryx2 = { git = "https://github.com/eclipse-iceoryx/iceoryx2", branch = "main" }
iceoryx2-services-tunnel = { git = "https://github.com/eclipse-iceoryx/iceoryx2", branch = "main" }
iceoryx2-integrations-zenoh-tunnel-backend = { git = "https://github.com/eclipse-iceoryx/iceoryx2", branch = "main" }
